fixed footer logo and fixed mobile playback of video

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,7 +6,8 @@ footer {
   padding: 32px 0 1rem 0;
 
   img {
-    max-width: 316px;
+    margin: 0 auto;
+    width: calc(100% - 2rem);
   }
 
   .footer-navigation {
@@ -82,6 +83,10 @@ footer p {
 }
 
 @media (min-width: 1000px) {
+
+  footer img {
+    max-width: 316px;
+  }
 
   .footer-container {
     flex-direction: row;
