--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -202,15 +202,24 @@
             flex-direction: row;
             align-items: center;
             max-width: 1254px;
-            gap: 1rem;
-            padding: 4rem 0;
+            gap: 2rem;
+            padding: 4rem 30px;
 
             img {
-                width: 100%;
+                border-radius: 12px;
+                flex: 1;
+                width: 50%;
             }
         }
 
         .about-flex {
+            flex: 1;
+            width: 50%;
+
+            h2 {
+                max-width: 500px;
+            }
+
             .about-btn {
                 width: 316px;
             }
