--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @use 'header';
 @use 'footer';
 @use 'base';
+@use 'home';
 @use 'service-about-pages';
 @use '_form-pages';
 @use '_featured-products';
