--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,5 @@
 ---
+const year = new Date().getFullYear();
 import "../styles/styles.scss";
 ---
 
@@ -38,6 +39,6 @@ import "../styles/styles.scss";
         </div>
       </div>
     </div>
-      <p class="footer-copyright">Copyright © Print|ED 2025</p>
+      <p class="footer-copyright">Copyright &copy; Print|ED {year}</p>
   </div>
 </footer>
