--- a/src/components/Products/ProductsHero.astro
+++ b/src/components/Products/ProductsHero.astro
@@ -2,8 +2,10 @@
 const {productHeroHeader, productHeroText, productHeroImage, productsAltText} = Astro.props;
 ---
 
-<div>
-    <h1>{productHeroHeader}</h1>
-    <img src={productHeroImage} alt={productsAltText}>
-    <p>{productHeroText}</p>
+<div class="products-banner">
+    <div class="products-hero">
+        <h1>{productHeroHeader}</h1>
+        <img src={productHeroImage} alt={productsAltText}>
+        <p>{productHeroText}</p>
+    </div>
 </div>
