Styled online services section

--- a/src/components/HomePage/OnlineBased.astro
+++ b/src/components/HomePage/OnlineBased.astro
@@ -2,7 +2,7 @@
 const {onlineBasedHeader, onlineBasedImage, onlineBasedText, onlineBasedBtn, onlineBasedAltText} = Astro.props;
 ---
 
-<div class="online-services">
+<div class="online-services container">
     <img src={onlineBasedImage} alt={onlineBasedAltText}>
     <div class="online-card">
         <h2>{onlineBasedHeader}</h2>
