--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -99,6 +99,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 6rem;
 
     img {
         border-radius: 12px;
@@ -174,5 +175,28 @@
                 padding: 4.5px 12px;
             }
         }
+    }
+}
+
+.online-services {
+    margin-top: 6rem;
+    background-color: $primary-blue;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    display: flex;;
+    flex-direction: column;
+    gap: 1rem;
+
+    .online-card {
+        @include white-card;
+        border-radius: 12px;
+
+        h2 {
+            padding: 1rem 0;
+        }
+    }
+
+    a {
+        @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
     }
 }
