--- a/src/components/HomePage/FeaturedProducts.astro
+++ b/src/components/HomePage/FeaturedProducts.astro
@@ -18,7 +18,7 @@ const {
 import "../../styles/styles.scss";
 ---
 
-<div class="featured-products">
+<section class="featured-products">
     <h2>{featuredProductsHeader}</h2>
     <div class="products-section container">
         <section class="pressure-seal-section">
@@ -37,4 +37,4 @@ import "../../styles/styles.scss";
             <a href="/integrated-form-labels">{integratedFormBtn}</a>
         </section>
     </div>
-</div>
+</section>
