--- a/src/components/HomePage/OnlineBased.astro
+++ b/src/components/HomePage/OnlineBased.astro
@@ -2,11 +2,11 @@
 const {onlineBasedHeader, onlineBasedImage, onlineBasedText, onlineBasedBtn, onlineBasedAltText} = Astro.props;
 ---
 
-<div class="online-services container">
+<section class="online-services container">
     <img src={onlineBasedImage} alt={onlineBasedAltText}>
     <div class="online-card">
         <h2>{onlineBasedHeader}</h2>
         <p>{onlineBasedText}</p>
     </div>
     <a href="/online-services">{onlineBasedBtn}</a>
-</div>
+</section>
